<resources>
    <string name="app_name">Dinsheng</string>

    <string name="hintUser">Username</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Password</string>
    <string name="selectphoto">Please select a photo</string>
    <string name="have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="bck_to_main">Back to registration?</string>
    <string name="login">login</string>
    <string name="photo_select">Select a Photo</string>
    <string name="send">Send</string>
    <string name="enter_message">Enter Message</string>

    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

</resources>